--- a/ui/main.css
+++ b/ui/main.css
@@ -87,3 +87,37 @@ table.role_choose tr td {
     border: 0px;
     background-color: #EEDED7;
 }
+
+.horizen_wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.horizen_wrapper p {
+    font-family: "Microsoft YaHei";
+    font-size: 18px;
+}
+
+#ip, #port {
+    color: #B35C37;
+}
+
+#server_addr .horizen_wrapper input {
+    height: 24px;
+    width: 100px;
+    font-size: 24px;
+    margin: auto;
+}
+
+#server_addr .horizen_wrapper p {
+    margin: auto;
+}
+
+#connect {
+    width: 80px;
+    margin: 20px auto;
+    padding: 8px;
+    font-family: "Microsoft YaHei";
+    font-size: 18px;
+    background-color: #EEDED7;
+}
