--- a/customboard.ui
+++ b/customboard.ui
@@ -11,13 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Custom Game</string>
   </property>
   <widget class="QPushButton" name="ok">
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>60</y>
+     <y>130</y>
      <width>181</width>
      <height>21</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>90</y>
+     <y>160</y>
      <width>181</width>
      <height>21</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>120</y>
+     <y>190</y>
      <width>181</width>
      <height>21</height>
     </rect>
@@ -56,13 +56,51 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>150</y>
+     <y>220</y>
      <width>181</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>load B</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>40</y>
+     <width>181</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>微软雅黑 Light</family>
+     <pointsize>24</pointsize>
+    </font>
+   </property>
+   <property name="minimum">
+    <number>150</number>
+   </property>
+   <property name="maximum">
+    <number>600</number>
+   </property>
+   <property name="value">
+    <number>300</number>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="whiteFirst">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>260</y>
+     <width>131</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>White go first</string>
    </property>
   </widget>
  </widget>
